--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,6 @@
 .glassCard {
-    background: rgba(230, 230, 230, 0.45);
+    background: rgba(255, 255, 255, 0.45);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
+    border: rgb(240, 240, 240) 2px solid;
 }
